--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@number-flow/react": "^0.5.14",
     "@tailwindcss/line-clamp": "^0.4.4",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "tailwind-merge": "^3.5.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
